--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-blurhash",
+  "name": "@foxar/strapi-blurhash",
   "version": "1.1.1",
   "description": "A plugin that generates blurhash for your uploaded images",
   "strapi": {
